[project]
name = "mcp-proxy"
version = "0.1.0"
description = "Local MCP proxy that fans out to upstream MCP servers and exposes a localhost HTTP control plane for runtime policy."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "aiohttp>=3.9",
]

[project.scripts]
mcp-proxy = "mcp_proxy:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcp_proxy"]
